# Segmentation_Engineer

./: README.md
Seg_Engineer/: CMakeLists.txt  seg_main.cpp
Seg_Engineer_train/: test_img.py  train.py  trans_model.py
Seg_Engineer_train/mit_semseg/: dataset.py
Seg_Engineer_train/mit_semseg/config/: defaults.py
Seg_Engineer_train/mit_semseg/models/: model_build.py  models.py  resnet.py
Seg_Engineer_train/mit_semseg/opencv_transforms/: transforms.py
